# emojfuscate_cli

./: Cargo.toml  LICENSE  Makefile  README.md  build.rs  emojfuscate  flake.nix  test.bats
scripts/: install.sh
src/: cli_args.rs  hex_stream.rs  main.rs
